test/expected/explain_o_minus2_rkd_rk.out
explain S& operator--(S&, double)
                          ^
27: error: invalid postfix non-member operator -- parameter type "double"; must be "int" or a typedef thereof
